comment overflow:hidden, because it breaks correct scrolling when viewing log and code files. (does this break anything else?)

--- a/org/bccvl/theme/theme/html/css/general.css
+++ b/org/bccvl/theme/theme/html/css/general.css
@@ -429,7 +429,7 @@ div.loader {
 }
 .bccvl-preview-pane.active, .bccvl-preview-pane.multimaps {
     background:none;
-    overflow:hidden;
+/*    overflow:hidden; */
 }
 
 .bccvl-preview-pane .empty {
